--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -2,11 +2,21 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/alpine38"
-  config.vm.network "private_network", ip: "10.92.3.1"
-  config.vm.network "private_network", ip: "10.1.92.1"
-  config.vm.network "public_network"
-    config.vm.provider "virtualbox" do |vb|
-      vb.memory = "128"
-    end
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = "128"
+  end
+
+  config.vm.define "server", primary: true do |server|
+    server.vm.hostname = "server"
+    server.vm.box = "generic/alpine38"
+    server.vm.network "private_network", ip: "10.92.3.1"
+    server.vm.network "private_network", ip: "10.1.92.1"
+    server.vm.network "public_network"  
+  end
+  
+  config.vm.define "client1" do |client1|
+    client1.vm.hostname = "client1"
+    client1.vm.box = "generic/alpine38"
+    client1.vm.network "private_network", ip: "10.92.3.2"
+  end
 end
