--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -17,6 +17,15 @@ Vagrant.configure("2") do |config|
   config.vm.define "client1" do |client1|
     client1.vm.hostname = "client1"
     client1.vm.box = "generic/alpine38"
-    client1.vm.network "private_network", ip: "10.92.3.2"
+    client1.vm.network "private_network", type: "dhcp"
+    client1.vm.network "private_network", ip: "172.16.3.1"
+  end
+
+  config.vm.define "client2" do |client2|
+    client2.vm.hostname = "client2"
+    client2.vm.box = "generic/alpine38"
+    client2.vm.network "private_network", type: "dhcp"
+    client2.vm.network "private_network", ip: "172.16.3.2"
   end
 end
+
