--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -1,9 +1,12 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-
 Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "128"
+  end
+
+  config.vm.provision :ansible do |ansible|
+    ansible.playbook = "playbook.yml"
   end
 
   config.vm.define "server", primary: true do |server|
@@ -17,14 +20,14 @@ Vagrant.configure("2") do |config|
   config.vm.define "client1" do |client1|
     client1.vm.hostname = "client1"
     client1.vm.box = "generic/alpine38"
-    client1.vm.network "private_network", type: "dhcp"
+    client1.vm.network "private_network", ip: "10.1.92.2", auto_config: false
     client1.vm.network "private_network", ip: "172.16.3.1"
   end
 
   config.vm.define "client2" do |client2|
     client2.vm.hostname = "client2"
     client2.vm.box = "generic/alpine38"
-    client2.vm.network "private_network", type: "dhcp"
+    client2.vm.network "private_network", ip: "10.92.3.2", auto_config: false
     client2.vm.network "private_network", ip: "172.16.3.2"
   end
 end
