--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -5,16 +5,19 @@ Vagrant.configure("2") do |config|
     vb.memory = "128"
   end
 
-  config.vm.provision :ansible do |ansible|
-    ansible.playbook = "playbook.yml"
-  end
-
   config.vm.define "server", primary: true do |server|
     server.vm.hostname = "server"
     server.vm.box = "generic/alpine38"
     server.vm.network "private_network", ip: "10.92.3.1"
     server.vm.network "private_network", ip: "10.1.92.1"
     server.vm.network "public_network"  
+    server.vm.provision "shell", inline: <<-SHELL
+     echo "update apk"
+     sudo apk update
+     echo "install dhcp server"
+     sudo apk add dhcp
+    SHELL
+    #server.vm.provision "dhcpd config", source: "dhcpd.conf", destination: "/etc/dhcp/" 
   end
   
   config.vm.define "client1" do |client1|
