--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -5,19 +5,22 @@ Vagrant.configure("2") do |config|
     vb.memory = "128"
   end
 
+  config.ssh.insert_key = false
+
   config.vm.define "server", primary: true do |server|
     server.vm.hostname = "server"
     server.vm.box = "generic/alpine38"
     server.vm.network "private_network", ip: "10.92.3.1"
     server.vm.network "private_network", ip: "10.1.92.1"
     server.vm.network "public_network"  
+    server.vm.provision "file", source: "dhcpd.conf", destination: "/tmp/"
     server.vm.provision "shell", inline: <<-SHELL
      echo "update apk"
      sudo apk update
      echo "install dhcp server"
      sudo apk add dhcp
+     sudo cp /tmp/dhcpd.conf /etc/dhcp/
     SHELL
-    #server.vm.provision "dhcpd config", source: "dhcpd.conf", destination: "/etc/dhcp/" 
   end
   
   config.vm.define "client1" do |client1|
