--- a/m5/vagrant-net/Vagrantfile
+++ b/m5/vagrant-net/Vagrantfile
@@ -20,6 +20,8 @@ Vagrant.configure("2") do |config|
      echo "install dhcp server"
      sudo apk add dhcp
      sudo cp /tmp/dhcpd.conf /etc/dhcp/
+     sudo rc-update add dhcpd
+     sudo rc-service dhcpd start
     SHELL
   end
   
