--- a/m5/bridge-intnet-lo_routes/Vagrantfile
+++ b/m5/bridge-intnet-lo_routes/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "server", primary: true do |server|
 	  server.vm.provider "virtualbox" do |vb|
             vb.customize ["modifyvm", :id, "--nic3", "intnet"]
-            vb.customize ["modifyvm", :id, "--intnet1", "intnet1"] #eth2 2.2.2.0 
+            vb.customize ["modifyvm", :id, "--intnet1", "intnet1"] #eth2 1.2.2.0 
             vb.customize ["modifyvm", :id, "--nic4", "intnet"]
             vb.customize ["modifyvm", :id, "--intnet2", "intnet2"] #eth3 1.1.1.0
 	    vb.memory = "256"
@@ -72,13 +72,15 @@ Vagrant.configure("2") do |config|
 #     sudo ip link set eth1 up
 #     sudo ip link set eth2 up
       sudo cp /tmp/interface_cl1 /etc/network/interfaces
-#     sudo rc-service networking restart
+      #apply changes in conf file
+      sudo rc-service networking restart
 #     sudo route add 192.168.1.19 dev eth1
 #     sudo route add 192.168.1.19 dev eth2
-#     sudo ip route del default via 10.0.2.2 || true
-#     sudo ip route add 192.168.1.19 dev eth1
+      sudo ip route del default via 10.0.2.2 || true
+      sudo ip route add 192.168.1.19 dev eth1
       # add next hop
-#     sudo route add -net 192.168.1.0 netmask 255.255.255.0 gw 192.168.1.19
+      sudo route add -net 192.168.1.0 netmask 255.255.255.0 gw 192.168.1.19
+      sudo route add default gw 192.168.1.19
      SHELL
   end
   
