--- a/m5/bridge-intnet-lo_routes/dhcpd.conf
+++ b/m5/bridge-intnet-lo_routes/dhcpd.conf
@@ -2,7 +2,7 @@ default-lease-time 600;
 max-lease-time 7200;
 authoritative;
 subnet 2.2.2.0 netmask 255.255.255.0 {
-    interface eth2;
+#   interface eth2;
     range 2.2.2.2 2.2.2.10;
     option subnet-mask 255.255.255.0;
     option routers 192.168.1.19;
@@ -10,7 +10,7 @@ subnet 2.2.2.0 netmask 255.255.255.0 {
   }
 
 subnet 1.1.1.0 netmask 255.255.255.0 {
-    interface eth3;
+#   interface eth3;
     range 1.1.1.2 1.1.1.10;
     option subnet-mask 255.255.255.0;
     option routers 192.168.1.19;
