--- a/m5/bridge-intnet-lo_routes/Vagrantfile
+++ b/m5/bridge-intnet-lo_routes/Vagrantfile
@@ -23,13 +23,14 @@ Vagrant.configure("2") do |config|
     inline: "sudo ifconfig eth1 192.168.1.19 netmask 255.255.255.0 up"
 
     server.vm.provision "file", source: "dhcpd.conf", destination: "/tmp/"
-#   server.vm.provision "file", source: "interfaces", destination: "/tmp/"
+    server.vm.provision "file", source: "sshd_config", destination: "/tmp/"
     server.vm.provision "shell", inline: <<-SHELL
       sudo ip addr add 2.2.2.1/24 dev eth2
       sudo ip link set eth2 up
       sudo ip addr add 1.1.1.1/24 dev eth3
       sudo ip link set eth3 up
-#     sudo cp /tmp/interfaces /etc/network/
+      sudo mv -f /tmp/sshd_config /etc/ssh/sshd_config
+      sudo rc-service sshd restart
 #     sudo rc-service networking restart
       sudo ip route del default via 10.0.2.2 || true
       sudo ip route add default via 192.168.1.1
@@ -81,6 +82,7 @@ Vagrant.configure("2") do |config|
       # add next hop
       sudo route add -net 192.168.1.0 netmask 255.255.255.0 gw 192.168.1.19
       sudo route add default gw 192.168.1.19
+
      SHELL
   end
   
